--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="lib" path="lib/httpmime-4.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/jna-4.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/htmlcleaner.jar"/>
+	<classpathentry kind="lib" path="lib/spray-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
